1.4.3
---

- Fix mpg123_tell() and mpg123_seek() return values with respect to the samples in decoding buffer (bug 1947373).
- Fix (bogus) 3DNow detection on IDT C6 (bug 1947982).
- Fix mono playback of win32 output (bug 1955157).

1.4.2
---

- Fix build problems (for Cygwin and Win32, perhaps others, too).

1.4.1
---

- Fix a serious regression of terminal control mode (forgot to remove a term_restore(), bug 1936548).

1.4.0
---

- Enable runtime check for available and working output modules.
  Now mpg123 tries all built modules (or a list specified in mpg123 -o moda,modb,modc) in turn to find a working output.
  This minimizes the situation of having to specify a device when default output doesn't work for some reason.
  See bug 1910500.
- libmpg123 2.2.2
  - Fixing an endless loop for ICY streams that suddenly end without error (just EOF).
  - Further fixes around EOF handling in (buffered/ICY) streams.
- Enable user to interrupt mpg123 when stuck in a loop of failing to open a track (with --loop).
- This time with correct RPM spec (hopefully... sorry, Michael!).

1.3.1
---
- Enable snd_pcm_sw_params_set_xfer_align() for alsa-lib < 1.0.16 (bug 1908603).
- libmpg123 2.1.2 (no-op change)

1.3.0
---

This is a _major_ fix release for http streaming!
Much more usable than earlier mpg123 1.x versions.

- libmpg123 libtool-version 2.0.2
  - Fix nasty bug in ICY reader that failed to account for partial reads from slower network.
  - Now non-seekable streams can get peek-ahead for MPEG sync, too, triggered by the MPG123_SEEKBUFFER flag.
  - Do not try to resync on streams with ICY metadata, that won't work.
    Consequently, if there's unreliable network, use --loop -1 to make mpg123 reconnect to the server on errors.
  - Applying a few layer 3 decoder fixes from old mhipp CVS (hail to the creator;-)
    That includes the fix for bug 1895025.
  - Fix ID3v2 parser with very invalid claimed ID3v2 frame sizes (could have triggered DOS before).