@@ -13,6 +13,7 @@ The creator: Michael Hipp (email: hippm@informatik.uni-tuebingen.de - please bot
 
 Contributions/ideas Thomas Orgis era (includes backports from mhipp trunk):
 
+Dan Smith <dan@algenta.com>: ABI fixes for ensuring stack alignment (esp. for MinGW-built DLL with MSVC)
 Michael Ryzhykh <mclroy@gmail.com>: mpg123.spec.in
 Stefan Lenselink <Stefan@lenselink.org>: initial aRts output
 Sergej Kvachonok <ravenexp@gmail.com>: win32 audio rewrite
